fix: baseline Java 17